--- a/scripts/og.html
+++ b/scripts/og.html
@@ -2,44 +2,178 @@
 <html>
 <head>
 <style>
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Permanent+Marker&display=swap');
 * { margin: 0; padding: 0; box-sizing: border-box; }
 body {
   width: 1200px; height: 630px;
   background: #0d0d2b;
-  display: flex; align-items: center; justify-content: center;
   font-family: 'Bangers', cursive;
   overflow: hidden; position: relative;
 }
-.border { position: absolute; inset: 0; border: 4px solid #ffcc00; }
-.logo { position: absolute; top: 40px; left: 50px; display: flex; align-items: center; gap: 15px; }
-.logo-text { font-size: 32px; color: white; letter-spacing: 3px; }
-.content { text-align: center; z-index: 1; }
-h1 { font-size: 74px; color: white; line-height: 1; letter-spacing: 2px; }
-h1 span { color: #ffcc00; }
-.subtitle { font-family: monospace; font-size: 16px; color: rgba(255,255,255,0.5); letter-spacing: 3px; margin-top: 20px; text-transform: uppercase; }
-.stats { display: flex; gap: 60px; justify-content: center; margin-top: 35px; }
-.stat-value { font-size: 44px; color: #ffcc00; }
-.stat-label { font-family: monospace; font-size: 11px; color: rgba(255,255,255,0.4); letter-spacing: 2px; margin-top: 2px; }
-.badge { position: absolute; bottom: 40px; right: 50px; background: #ffcc00; color: #0d0d2b; padding: 12px 28px; font-size: 24px; border-radius: 12px; letter-spacing: 2px; }
-.glow { position: absolute; top: -100px; right: -100px; width: 400px; height: 400px; border-radius: 50%; background: radial-gradient(circle, rgba(255,204,0,0.12), transparent 70%); }
-.glow2 { position: absolute; bottom: -100px; left: -100px; width: 300px; height: 300px; border-radius: 50%; background: radial-gradient(circle, rgba(0,85,255,0.12), transparent 70%); }
+/* Yellow comic border */
+.border { position: absolute; inset: 0; border: 5px solid #ffcc00; z-index: 10; pointer-events: none; }
+
+/* Ben Day dots background */
+.dots {
+  position: absolute; inset: 0;
+  background-image: radial-gradient(circle, rgba(255,204,0,0.08) 1.5px, transparent 1.5px);
+  background-size: 16px 16px;
+  z-index: 1;
+}
+
+/* Diagonal speed lines */
+.speed-lines {
+  position: absolute; inset: 0; z-index: 2; opacity: 0.06;
+  background: repeating-linear-gradient(
+    -45deg,
+    transparent,
+    transparent 8px,
+    rgba(255,204,0,0.5) 8px,
+    rgba(255,204,0,0.5) 9px
+  );
+}
+
+/* Glow effects */
+.glow-yellow {
+  position: absolute; top: -80px; right: -50px;
+  width: 500px; height: 500px; border-radius: 50%;
+  background: radial-gradient(circle, rgba(255,204,0,0.15), transparent 60%);
+  z-index: 2;
+}
+.glow-blue {
+  position: absolute; bottom: -120px; left: -80px;
+  width: 400px; height: 400px; border-radius: 50%;
+  background: radial-gradient(circle, rgba(0,85,255,0.12), transparent 60%);
+  z-index: 2;
+}
+.glow-red {
+  position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
+  width: 600px; height: 300px; border-radius: 50%;
+  background: radial-gradient(ellipse, rgba(230,0,35,0.06), transparent 70%);
+  z-index: 2;
+}
+
+/* Logo area */
+.logo {
+  position: absolute; top: 35px; left: 45px; z-index: 20;
+  display: flex; align-items: center; gap: 14px;
+}
+.logo img { width: 52px; height: 52px; border-radius: 50%; border: 3px solid rgba(255,204,0,0.6); }
+.logo-text { font-size: 28px; color: white; letter-spacing: 4px; text-shadow: 3px 3px 0 rgba(0,0,0,0.4); }
+
+/* Main content */
+.content {
+  position: absolute; inset: 0; z-index: 5;
+  display: flex; flex-direction: column; align-items: center; justify-content: center;
+  padding: 0 60px;
+}
+
+/* Headline */
+.headline {
+  font-size: 82px; color: white; line-height: 0.95;
+  letter-spacing: 3px; text-align: center;
+  text-shadow: 
+    -2px -1px 0 rgba(0,255,255,0.35),
+    2px 1px 0 rgba(255,0,255,0.25),
+    4px 4px 0 rgba(0,0,0,0.3);
+}
+.headline .yellow { 
+  color: #ffcc00; 
+  text-shadow: 
+    -2px -1px 0 rgba(255,100,0,0.3),
+    2px 1px 0 rgba(255,0,100,0.2),
+    4px 4px 0 rgba(0,0,0,0.4);
+  font-size: 96px;
+}
+
+/* Label pill */
+.label {
+  font-family: monospace; font-size: 11px; letter-spacing: 4px;
+  color: #ffcc00; text-transform: uppercase;
+  border: 1px solid rgba(255,204,0,0.3); border-radius: 20px;
+  padding: 6px 18px; margin-bottom: 18px;
+}
+
+/* Stats bar */
+.stats {
+  display: flex; gap: 45px; margin-top: 30px;
+  padding: 16px 40px; border-radius: 12px;
+  background: rgba(255,255,255,0.04);
+  border: 1px solid rgba(255,204,0,0.15);
+}
+.stat { text-align: center; }
+.stat-value { font-size: 38px; color: #ffcc00; line-height: 1; }
+.stat-label { font-family: monospace; font-size: 9px; color: rgba(255,255,255,0.4); letter-spacing: 3px; margin-top: 4px; text-transform: uppercase; }
+.stat-divider { width: 1px; background: rgba(255,204,0,0.15); align-self: stretch; }
+
+/* Price burst */
+.burst {
+  position: absolute; right: 50px; bottom: 35px; z-index: 20;
+  width: 120px; height: 120px;
+  background: #ffcc00;
+  clip-path: polygon(50% 0%, 61% 15%, 78% 5%, 75% 25%, 95% 30%, 82% 45%, 100% 55%, 82% 60%, 90% 80%, 72% 72%, 65% 95%, 55% 78%, 40% 95%, 38% 75%, 18% 82%, 28% 62%, 5% 55%, 22% 45%, 8% 30%, 28% 28%, 22% 10%, 38% 20%);
+  display: flex; align-items: center; justify-content: center; flex-direction: column;
+}
+.burst-price { font-size: 30px; color: #0d0d2b; line-height: 1; margin-top: -2px; }
+.burst-sub { font-family: 'Permanent Marker', cursive; font-size: 10px; color: #0d0d2b; }
+
+/* Impact star */
+.impact {
+  position: absolute; left: 45px; bottom: 40px; z-index: 20;
+  background: rgba(230,0,35,0.9); color: white;
+  font-size: 13px; letter-spacing: 2px;
+  padding: 8px 20px; border-radius: 4px;
+  transform: rotate(-2deg);
+  box-shadow: 3px 3px 0 rgba(0,0,0,0.3);
+}
+
+/* Corner accents */
+.corner-tl, .corner-br {
+  position: absolute; z-index: 8;
+  width: 80px; height: 80px;
+}
+.corner-tl {
+  top: 15px; right: 180px;
+  border-top: 3px solid rgba(255,204,0,0.15);
+  border-left: 3px solid rgba(255,204,0,0.15);
+}
 </style>
 </head>
 <body>
   <div class="border"></div>
-  <div class="glow"></div>
-  <div class="glow2"></div>
-  <div class="logo"><div class="logo-text">SMACK'EM BETS</div></div>
+  <div class="dots"></div>
+  <div class="speed-lines"></div>
+  <div class="glow-yellow"></div>
+  <div class="glow-blue"></div>
+  <div class="glow-red"></div>
+
+  <div class="logo">
+    <img src="../public/logo.png" alt="">
+    <span class="logo-text">SMACK'EM BETS</span>
+  </div>
+
   <div class="content">
-    <h1>THE BOOKS USE AN AI.<br><span>DO YOU?</span></h1>
-    <div class="subtitle">AI-Powered Betting Intelligence</div>
+    <div class="label">AI-Powered Betting Weaponry</div>
+    <div class="headline" data-text="THE BOOKS USE AN AI. DO YOU?">
+      THE BOOKS USE AN AI.<br>
+      <span class="yellow">DO YOU?</span>
+    </div>
     <div class="stats">
-      <div class="stat"><div class="stat-value">68.3%</div><div class="stat-label">WIN RATE</div></div>
-      <div class="stat"><div class="stat-value">835+</div><div class="stat-label">GAMES ANALYZED</div></div>
-      <div class="stat"><div class="stat-value">37</div><div class="stat-label">DATA POINTS/GAME</div></div>
+      <div class="stat"><div class="stat-value">68.3%</div><div class="stat-label">Win Rate</div></div>
+      <div class="stat-divider"></div>
+      <div class="stat"><div class="stat-value">835+</div><div class="stat-label">Games Analyzed</div></div>
+      <div class="stat-divider"></div>
+      <div class="stat"><div class="stat-value">37</div><div class="stat-label">Data Points</div></div>
+      <div class="stat-divider"></div>
+      <div class="stat"><div class="stat-value">7.0+</div><div class="stat-label">Edge Threshold</div></div>
     </div>
   </div>
-  <div class="badge">$250/MONTH</div>
+
+  <div class="burst">
+    <div class="burst-price">$250</div>
+    <div class="burst-sub">/month</div>
+  </div>
+
+  <div class="impact">🔥 LIMITED LAUNCH PRICING</div>
 </body>
 </html>
